# mamut-routing

./: .gitignore  .gitmodules  AUTHORS.md  CITATION.cff  LICENSE  NOTICE  README.md  TDVRP-integration.md  pyproject.toml
benchmarks/CVRP/Mamut2026/: README.md
benchmarks/VRPTW/Dimacs2021/: CHANGELOG.md  LICENSE  README.md
benchmarks/VRPTW/Dimacs2021/n=100/: C101.bks.MonoCost.json  C101.vrp.json  C102.bks.MonoCost.json  C102.vrp.json  C103.bks.MonoCost.json  C103.vrp.json  C104.bks.MonoCost.json  C104.vrp.json  C105.bks.MonoCost.json  C105.vrp.json  C106.bks.MonoCost.json  C106.vrp.json  C107.bks.MonoCost.json  C107.vrp.json  C108.bks.MonoCost.json  C108.vrp.json  C109.bks.MonoCost.json  C109.vrp.json  C201.bks.MonoCost.json  C201.vrp.json  C202.bks.MonoCost.json  C202.vrp.json  C203.bks.MonoCost.json  C203.vrp.json  C204.bks.MonoCost.json  C204.vrp.json  C205.bks.MonoCost.json  C205.vrp.json  C206.bks.MonoCost.json  C206.vrp.json  C207.bks.MonoCost.json  C207.vrp.json  C208.bks.MonoCost.json  C208.vrp.json  R101.bks.MonoCost.json  R101.vrp.json  R102.bks.MonoCost.json  R102.vrp.json  R103.bks.MonoCost.json  R103.vrp.json  (+72 more)
benchmarks/VRPTW/Dimacs2021/n=1000/: C1_10_1.bks.MonoCost.json  C1_10_10.bks.MonoCost.json  C1_10_2.bks.MonoCost.json  C1_10_3.bks.MonoCost.json  C1_10_4.bks.MonoCost.json  C1_10_5.bks.MonoCost.json  C1_10_6.bks.MonoCost.json  C1_10_7.bks.MonoCost.json  C1_10_8.bks.MonoCost.json  C1_10_9.bks.MonoCost.json  C2_10_1.bks.MonoCost.json  C2_10_10.bks.MonoCost.json  C2_10_2.bks.MonoCost.json  C2_10_3.bks.MonoCost.json  C2_10_4.bks.MonoCost.json  C2_10_5.bks.MonoCost.json  C2_10_6.bks.MonoCost.json  C2_10_7.bks.MonoCost.json  C2_10_8.bks.MonoCost.json  C2_10_9.bks.MonoCost.json  (+40 more)
benchmarks/VRPTW/Mamut2026/: LICENSE  README.md
benchmarks/VRPTW/Ortec2022/: LICENSE  README.md
benchmarks/VRPTW/Sintef2008/: CHANGELOG.md  LICENSE  README.md
osmdata/: .gitignore
src/mamut_routing_publish/: __init__.py  cli.py  progress.py  release_artifacts.py  road_cache.py  site_payloads.py  site_webapp.py  tdvrp_payloads.py
src/mamut_routing_publish/site_assets/: site.css  site.js  workbench.css  workbench.js
tests/: test_release_artifacts.py  test_site_payloads.py
webapp/: Manifest.toml  Project.toml  README.md  io-json-vrp.jl  osm_generation.jl  run_site_api.jl  site_api.jl  test_tdvrp_e2e.jl  test_traffic_simulation.jl  traffic_simulation.jl
(+2205 files in other folders)
